--- a/docs/_layouts/presentation.html
+++ b/docs/_layouts/presentation.html
@@ -8,8 +8,12 @@
       @import url(//fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic);
       @import url(//fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic);
 
+      * {
+        color: white;
+      }
       body { 
         font-family: 'Droid Serif'; 
+        color: black;
       }
       h1, h2, h3 {
         font-family: 'Yanone Kaffeesatz';
