fixing bg color

--- a/docs/_layouts/presentation.html
+++ b/docs/_layouts/presentation.html
@@ -13,7 +13,7 @@
       }
       body { 
         font-family: 'Droid Serif'; 
-        color: black;
+        background-color: black;
       }
       h1, h2, h3 {
         font-family: 'Yanone Kaffeesatz';
