--- a/docs/_layouts/presentation.html
+++ b/docs/_layouts/presentation.html
@@ -16,6 +16,13 @@
         font-weight: normal;
       }
       .remark-code, .remark-inline-code { font-family: 'Ubuntu Mono'; }
+
+      blockquote {
+        /* vertical line on the left of quotes */
+        margin-left: 0px;
+        padding-left: 40px;
+        border-left: 2px solid maroon;
+      }
     </style>
   </head>
   <body>
