--- a/docs/_layouts/presentation.html
+++ b/docs/_layouts/presentation.html
@@ -20,8 +20,8 @@
       blockquote {
         /* vertical line on the left of quotes */
         margin-left: 0px;
-        padding-left: 40px;
-        border-left: 2px solid maroon;
+        padding-left: 36px;
+        border-left: 4px solid pink;
       }
     </style>
   </head>
