--- a/docs/_layouts/presentation.html
+++ b/docs/_layouts/presentation.html
@@ -11,6 +11,7 @@
       body { 
         font-family: 'Droid Serif'; 
       }
+
       h1, h2, h3 {
         font-family: 'Yanone Kaffeesatz';
         font-weight: normal;
@@ -23,6 +24,11 @@
         padding-left: 36px;
         border-left: 4px solid pink;
       }
+      
+      img {
+        max-width: 100%;
+      }
+
     </style>
   </head>
   <body>
