--- a/docs/_layouts/presentation.html
+++ b/docs/_layouts/presentation.html
@@ -18,6 +18,15 @@
       }
       .remark-code, .remark-inline-code { font-family: 'Ubuntu Mono'; }
 
+      .remark-container {
+        background-color: black;
+      }
+
+      .remark-slide-scaler {
+        -webkit-box-shadow: none;
+        box-shadow: none;
+      }
+
       blockquote {
         /* vertical line on the left of quotes */
         margin-left: 0px;
