--- a/docs/_layouts/presentation.html
+++ b/docs/_layouts/presentation.html
@@ -16,17 +16,14 @@
         font-family: 'Yanone Kaffeesatz';
         font-weight: normal;
       }
-      .remark-code, .remark-inline-code { font-family: 'Ubuntu Mono'; }
 
-      .remark-container {
-        background-color: black;
+      h1, p, li {
+        color: #FADF68;
       }
-
-      .remark-slide-scaler {
-        -webkit-box-shadow: none;
-        box-shadow: none;
+      h2 {
+        color: #C5645E;
       }
-
+      
       blockquote {
         /* vertical line on the left of quotes */
         margin-left: 0px;
@@ -36,6 +33,24 @@
       
       img {
         max-width: 100%;
+      }
+
+      .remark-container {
+        background-color: #540F0E;
+      }
+
+      .remark-slide-content {
+        background-color: #1E270D;
+        color: white;
+      }
+
+      .remark-slide-scaler {
+        -webkit-box-shadow: 0 0 30px #646F32;
+        box-shadow: 0 0 30px #646F32;
+      }
+
+      .remark-code, .remark-inline-code { 
+        font-family: 'Ubuntu Mono'; 
       }
 
     </style>
