--- a/docs/_layouts/presentation.html
+++ b/docs/_layouts/presentation.html
@@ -17,11 +17,15 @@
         font-weight: normal;
       }
 
-      h1, p, li {
+      h1, p {
         color: #FADF68;
       }
       h2 {
         color: #C5645E;
+      }
+
+      li, a {
+        color: white;
       }
       
       blockquote {
