--- a/docs/_layouts/presentation.html
+++ b/docs/_layouts/presentation.html
@@ -8,6 +8,8 @@
       @import url(//fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic);
       @import url(//fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic);
 
+      /* color palette from https://www.colourlovers.com/palette/361545/garden_picnic */
+
       body { 
         font-family: 'Droid Serif'; 
       }
@@ -18,14 +20,14 @@
       }
 
       h1, p {
-        color: #FADF68;
+        color: white;
       }
       h2 {
         color: #C5645E;
       }
 
-      li, a {
-        color: white;
+      a, blockquote {
+        color: #FADF68;
       }
       
       blockquote {
