--- a/docs/_layouts/presentation.html
+++ b/docs/_layouts/presentation.html
@@ -34,7 +34,7 @@
         /* vertical line on the left of quotes */
         margin-left: 0px;
         padding-left: 36px;
-        border-left: 4px solid pink;
+        border-left: 4px solid #C5645E;
       }
       
       img {
