--- a/docs/_layouts/presentation.html
+++ b/docs/_layouts/presentation.html
@@ -35,6 +35,8 @@
         margin-left: 0px;
         padding-left: 36px;
         border-left: 4px solid #C5645E;
+        font-family: 'Yanone Kaffeesatz';
+        font-size: 1.1em;
       }
       
       img {
