strong em color change

--- a/docs/_layouts/presentation.html
+++ b/docs/_layouts/presentation.html
@@ -26,7 +26,7 @@
         color: #C5645E;
       }
 
-      a, blockquote {
+      a, blockquote, strong, em {
         color: #FADF68;
       }
       
@@ -36,7 +36,7 @@
         padding-left: 36px;
         border-left: 4px solid #C5645E;
         font-family: 'Yanone Kaffeesatz';
-        font-size: 1.1em;
+        font-size: 1.25em;
       }
       
       img {
