--- a/docs/_layouts/presentation.html
+++ b/docs/_layouts/presentation.html
@@ -60,6 +60,11 @@
       .remark-code, .remark-inline-code { 
         font-family: 'Ubuntu Mono'; 
       }
+      .remark-inline-code {
+        padding-left: 10px;
+        padding-right: 10px;
+        color: #FADF68;
+      }
 
     </style>
   </head>
