final formatting for now

--- a/docs/_layouts/presentation.html
+++ b/docs/_layouts/presentation.html
@@ -39,6 +39,11 @@
         font-size: 1.25em;
       }
       
+      code {
+        background: #272822;
+        border-radius: 5px;
+      }
+
       img {
         max-width: 100%;
       }
