--- a/assets/jekyll/_layouts/github.html
+++ b/assets/jekyll/_layouts/github.html
@@ -78,7 +78,7 @@
         <p>
           All content herein is copyrighted, shared under the
           <a
-            href="https://github.com/{{ site.github-org-name }}/{{ site.github-repo-name }}/blob/main/LICENSE"
+            href="https://github.com/{{ site.github-org-name }}{{ site.baseurl }}/blob/master/LICENSE"
             >{{ site.copyright }}</a
           >.
         </p>
@@ -88,7 +88,7 @@
         >
           Help
           <a
-            href="https://github.com/{{ site.github-org-name }}{{ site.baseurl }}/edit/main/{{ page.path | strip_html }}"
+            href="https://github.com/{{ site.github-org-name }}{{ site.baseurl }}/edit/master/{{ page.path | strip_html }}"
             >improve this page </a
           >.
         </div>
