--- a/assets/jekyll/_layouts/presentation.html
+++ b/assets/jekyll/_layouts/presentation.html
@@ -8,6 +8,11 @@
       {{ page.title | downcase | strip_html }} | {{ site.github.repository_name
       }} | {{ site.github.owner_name | downcase | strip_html }}
     </title>
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="{{ site.baseurl | strip_html }}/assets/favicon.ico"
+    />
     <style>
       @import url(//fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
       @import url(//fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic);
