addin jekyll seo plugin

--- a/assets/jekyll/_layouts/github.html
+++ b/assets/jekyll/_layouts/github.html
@@ -5,42 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- Begin Jekyll SEO tag v2.8.0 -->
-    <title>
-      {{ site.github.owner_name | downcase | strip_html }} | {{ page.title |
-      downcase | strip_html }} | {{ site.github.repository_name }}
-    </title>
-    <meta name="generator" content="Jekyll v3.9.2" />
-    <meta property="og:title" content="{{ page.title | strip_html }}" />
-    <meta property="og:locale" content="en_US" />
-    <meta name="description" content="{{ site.description | strip_html }}" />
-    <meta
-      property="og:description"
-      content="{{ site.description | strip_html }}"
-    />
-    <link
-      rel="canonical"
-      href="{{ site.baseurl }}/{{ page.url | strip_html }}"
-    />
-    <meta
-      property="og:url"
-      content="{{ site.baseurl }}/{{ page.url | strip_html }}"
-    />
-    <meta property="og:site_name" content="{{ site.title | strip_html }}" />
-    <meta property="og:type" content="website" />
-    <meta name="twitter:card" content="summary" />
-    <meta property="twitter:title" content="{{ page.title | strip_html }}" />
-    <script type="application/ld+json">
-      {
-        "@context": "https://schema.org",
-        "@type": "WebSite",
-        "description": "{{ site.description | strip_html }}",
-        "headline": "{{ page.title | strip_html }}",
-        "name": "{{ site.title | strip_html}}",
-        "url": "https://{{ site.github-org-name }}.github.io{{ site.baseurl }}/"
-      }
-    </script>
-    <!-- End Jekyll SEO tag -->
+    {% seo %}
 
     <link
       rel="stylesheet"
