--- a/theme/_layouts/presentation.html
+++ b/theme/_layouts/presentation.html
@@ -10,7 +10,7 @@
     <link
       rel="shortcut icon"
       type="image/x-icon"
-      href="{{ site.baseurl | strip_html }}/assets/favicon.ico"
+      href="{{ site.baseurl | strip_html }}/theme/favicon.ico"
     />
     <style>
       @import url(//fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
@@ -115,7 +115,7 @@
     </header>
     <textarea id="source">{{ content }}</textarea>
     <script
-      src="{{ site.baseurl | strip_html }}/assets/js/remark.js"
+      src="{{ site.baseurl | strip_html }}/theme/js/remark.js"
       type="text/javascript"
     ></script>
     <script type="text/javascript">
