--- a/theme/_layouts/github.html
+++ b/theme/_layouts/github.html
@@ -9,7 +9,7 @@
 
     <link
       rel="stylesheet"
-      href="{{ site.baseurl | strip_html }}/assets/css/style.css"
+      href="{{ site.baseurl | strip_html }}/theme/css/style.css"
     />
     <!-- start custom head snippets, customize with your own _includes/head-custom.html file -->
 
@@ -18,7 +18,7 @@
     <link
       rel="shortcut icon"
       type="image/x-icon"
-      href="{{ site.baseurl | strip_html }}/assets/favicon.ico"
+      href="{{ site.baseurl | strip_html }}/theme/favicon.ico"
     />
 
     <!-- end custom head snippets -->
