--- a/theme/_layouts/presentation.html
+++ b/theme/_layouts/presentation.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head lang="en">
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -120,8 +120,9 @@
     ></script>
     <script type="text/javascript">
       var slideshow = remark.create({
-        navigation: { scroll: false },
+        navigation: { scroll: true },
         highlightStyle: "monokai",
+        countIncrementalSlides: false,
       })
     </script>
   </body>
