--- a/theme/_layouts/github.html
+++ b/theme/_layouts/github.html
@@ -9,19 +9,14 @@
 
     <link
       rel="stylesheet"
-      href="{{ site.baseurl | strip_html }}/theme/css/style.css"
+      href="{{ site.baseurl | strip_html }}/theme/css/github.css"
     />
-    <!-- start custom head snippets, customize with your own _includes/head-custom.html file -->
-
-    <!-- Setup Google Analytics -->
 
     <link
       rel="shortcut icon"
       type="image/x-icon"
       href="{{ site.baseurl | strip_html }}/theme/favicon.ico"
     />
-
-    <!-- end custom head snippets -->
   </head>
   <body>
     <div class="container-lg px-3 my-5 markdown-body">
