turn off scroll

--- a/theme/_layouts/presentation.html
+++ b/theme/_layouts/presentation.html
@@ -38,7 +38,7 @@
     ></script>
     <script type="text/javascript">
       var slideshow = remark.create({
-        navigation: { scroll: true },
+        navigation: { scroll: false },
         highlightStyle: "monokai",
         countIncrementalSlides: false,
       })
