shift to .md files

--- a/theme/_layouts/presentation.html
+++ b/theme/_layouts/presentation.html
@@ -31,7 +31,7 @@
         </a>
       </small>
     </header>
-    <textarea id="source">{{ content }}</textarea>
+    <textarea id="source">{{ page.content }}</textarea>
     <script
       src="{{ site.baseurl | strip_html }}/theme/js/remark.js"
       type="text/javascript"
