--- a/theme/css/presentation.css
+++ b/theme/css/presentation.css
@@ -76,12 +76,23 @@ img {
 header.slides {
   color: #505050;
   position: fixed;
-  left: 20px;
+  z-index: 10;
+  width: 100%;
+  text-align: center;
+  /* left: 20px; */
   top: 20px;
 }
 header.slides a {
   color: #505050;
   text-decoration: none;
+}
+footer a.source {
+  color: #505050;
+  position: fixed;
+  z-index: 10;
+  width: 100%;
+  text-align: center;
+  bottom: 20px;
 }
 
 /* CUSTOM STYLES FOR TABLES */
